Remove guava and solve day3